added user and auth api
