# api/models/user.go
@@ -1,28 +1,37 @@
 package models
 
 type User struct {
-	ID              int64   `json:"id"`
-	FirstName       string  `json:"first_name"`
-	LastName        string  `json:"last_name"`
-	PhoneNumber     *string `json:"phone_number"`
-	Email           string  `json:"email"`
-	Gender          *string `json:"gender"`
-	Username        *string `json:"username"`
-	ProfileImageUrl *string `json:"profile_image_url"`
-	Type            string  `json:"type"`
-	CreatedAt       string  `json:"created_at"`
+	ID              int64  `json:"id"`
+	FirstName       string `json:"first_name"`
+	LastName        string `json:"last_name"`
+	PhoneNumber     string `json:"phone_number"`
+	Email           string `json:"email"`
+	Gender          string `json:"gender"`
+	Username        string `json:"username"`
+	ProfileImageUrl string `json:"profile_image_url"`
+	Type            string `json:"type"`
+	CreatedAt       string `json:"created_at"`
 }
 
 type CreateUserRequest struct {
-	FirstName       string  `json:"first_name" binding:"required,min=2,max=30"`
-	LastName        string  `json:"last_name" binding:"required,min=2,max=30"`
-	PhoneNumber     *string `json:"phone_number"`
-	Email           string  `json:"email" binding:"required,email"`
-	Gender          *string `json:"gender" binding:"oneof=male female"`
-	Password        string  `json:"password" binding:"required,min=6,max=16"`
-	Username        *string `json:"username"`
-	ProfileImageUrl *string `json:"profile_image_url"`
-	Type            string  `json:"type" binding:"required,oneof=superadmin user"`
+	FirstName       string `json:"first_name" binding:"required,min=2,max=30"`
+	LastName        string `json:"last_name" binding:"required,min=2,max=30"`
+	PhoneNumber     string `json:"phone_number"`
+	Email           string `json:"email" binding:"required,email"`
+	Gender          string `json:"gender" binding:"oneof=male female"`
+	Password        string `json:"password" binding:"required,min=6,max=16"`
+	Username        string `json:"username"`
+	ProfileImageUrl string `json:"profile_image_url"`
+	Type            string `json:"type" binding:"required,oneof=superadmin user"`
+}
+
+type UpdateUserRequest struct {
+	FirstName       string `json:"first_name" binding:"required,min=2,max=30"`
+	LastName        string `json:"last_name" binding:"required,min=2,max=30"`
+	PhoneNumber     string `json:"phone_number"`
+	Gender          string `json:"gender" binding:"oneof=male female"`
+	Username        string `json:"username"`
+	ProfileImageUrl string `json:"profile_image_url"`
 }
 
 type GetUsersResponse struct {
